<resources>
    <string name="app_name">ModuleLogin</string>

    <!--=================================登录页面===============================================-->
    <string name="login_lab_input_name">姓名</string>
    <string name="login_hint_input_name">请输入姓名</string>
    <string name="login_lab_input_phone_number">手机号</string>
    <string name="login_hint_input_phone_number">请输入手机号</string>
    <string name="login_hint_input_phone_number_length">请输入11位手机号</string>
    <string name="login_lab_input_pwd">密码</string>
    <string name="login_hint_input_pwd">请输入密码</string>
    <string name="login_hint_input_pwd_length">请输入6-18位密码</string>
    <string name="login_hint_get_sms_number">获取验证码</string>
    <string name="login_lab_input_sms_number">验证码</string>
    <string name="login_hint_input_sms_number">请输入验证码</string>
    <string name="login_hint_input_sms_number_length">请输入4位验证码</string>
    <string name="login_lab_login">登录</string>
    <string name="login_lab_register_user">用户注册</string>
    <string name="login_lab_register">注册</string>
    <string name="login_lab_forget_pwd">忘记密码</string>
    <string name="login_lab_other_login_type">其他登录方式</string>
    <string name="login_lab_login_type_wx">微信登录</string>
    <string name="login_lab_login_type_phone">密码登录</string>
    <string name="login_lab_login_type_sms">手机验证码登录</string>
    <string name="tv_find_pwd">找回密码</string>
    <string name="tv_find_pwd_to_login">找回成功,请重新登录</string>
    <string name="module_login_name_update_pwd">修改密码</string>
    <string name="module_login_name_update">修改</string>
    <string name="module_login_name_update_success">修改成功</string>
    <string name="login_hint_input_pwd_old">请输入旧密码</string>
    <string name="login_hint_input_pwd_new">请输入新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="please_confirm_password">请输入确认密码</string>
    <string name="password_not_equals">输入密码不一致</string>
    <string name="set_password">设置密码</string>

</resources>
