<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lin_addciecleprice"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/public_pad_left_25dp"
        android:paddingRight="@dimen/public_pad_right_25dp">

        <ImageView
            android:layout_width="@dimen/public_width_100dp"
            android:layout_height="@dimen/public_height_100dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/public_mar_top_80dp"
            android:layout_marginBottom="@dimen/public_mar_bottom_25dp"
            android:src="@mipmap/app_logo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/public_mar_bottom_32dp"
            android:layout_marginBottom="@dimen/public_mar_bottom_32dp"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/public_height_72dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/login_lab_input_phone_number"
                    android:textColor="@color/public_color_333333"
                    android:textSize="@dimen/public_font_20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <me.jessyan.armscomponent.commonres.other.ClearEditText
                        android:id="@+id/et_user_phone"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:hint="@string/login_hint_input_phone_number"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:textColor="@color/public_color_333333"
                        android:textSize="@dimen/public_font_16sp"
                        android:textStyle="normal" />

                </LinearLayout>

                <include layout="@layout/public_line_horizontal_gray" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_input_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/public_height_72dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/login_lab_input_pwd"
                    android:textColor="@color/public_color_333333"
                    android:textSize="@dimen/public_font_20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <me.jessyan.armscomponent.commonres.other.ClearEditText
                        android:id="@+id/et_userPwd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:hint="@string/login_hint_input_pwd"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:textColor="@color/public_color_333333"
                        android:textSize="@dimen/public_font_16sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <include layout="@layout/public_line_horizontal_gray" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_input_checkNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/public_height_72dp"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/login_lab_input_sms_number"
                    android:textColor="@color/public_color_333333"
                    android:textSize="@dimen/public_font_20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <me.jessyan.armscomponent.commonres.other.ClearEditText
                        android:id="@+id/et_checkNumebr"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:hint="@string/login_hint_input_sms_number"
                        android:inputType="number"
                        android:maxLength="6"
                        android:singleLine="true"
                        android:textColor="@color/public_color_333333"
                        android:textSize="@dimen/public_font_16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tv_send_number"
                        android:layout_width="@dimen/public_width_90dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/login_hint_get_sms_number"
                        android:textColor="@color/public_color_FACA0C"
                        android:textSize="@dimen/public_font_17sp"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </LinearLayout>

                <include layout="@layout/public_line_horizontal_gray" />
            </LinearLayout>
        </LinearLayout>


        <include layout="@layout/layout_btn_submit" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/public_height_25dp"
            android:layout_marginTop="@dimen/public_mar_top_5dp">

            <TextView
                android:id="@+id/tv_phone_register"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login_lab_register_user"
                android:textColor="#F79A3F"
                android:textSize="@dimen/public_font_13sp" />

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/login_lab_forget_pwd"
                android:textColor="#F79A3F"
                android:textSize="@dimen/public_font_13sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/public_height_1dp"
                android:layout_weight="1"
                android:background="@color/public_color_F0F0F0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/public_mar_left_20dp"
                android:layout_marginRight="@dimen/public_mar_right_20dp"
                android:text="@string/login_lab_other_login_type"
                android:textColor="#ff999999"
                android:textSize="@dimen/public_font_12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/public_height_1dp"
                android:layout_weight="1"
                android:background="@color/public_color_F0F0F0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/public_pad_top_20dp">

            <LinearLayout
                android:id="@+id/lv_login_type_wx"
                android:layout_width="@dimen/public_width_80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_login_weixin_lab" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/public_pad_top_7dp"
                    android:text="@string/login_lab_login_type_wx"
                    android:textColor="#ff999999"
                    android:textSize="@dimen/public_font_12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_login_type_pwd"
                android:layout_width="@dimen/public_width_80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_login_pwd_lab" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/public_pad_top_7dp"
                    android:text="@string/login_lab_login_type_phone"
                    android:textColor="#ff999999"
                    android:textSize="@dimen/public_font_12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_login_type_sms"
                android:layout_width="@dimen/public_width_80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_login_phone_lab" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/public_pad_top_7dp"
                    android:text="@string/login_lab_login_type_sms"
                    android:textColor="#ff999999"
                    android:textSize="@dimen/public_font_12sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>