<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_stausview" />

    <include layout="@layout/public_include_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/public_height_60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="20dp"
            android:layout_marginLeft="@dimen/public_mar_left_15dp"
            android:layout_marginRight="@dimen/public_mar_right_15dp"
            android:text="原密码"
            android:textColor="#ff333333"
            android:textSize="17sp" />

        <me.jessyan.armscomponent.commonres.other.ClearEditText
            android:id="@+id/et_pwd_old"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/public_mar_right_15dp"
            android:background="@color/transparent"
            android:ellipsize="end"
            android:hint="请输入原密码"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="@color/public_color_333333"
            android:textSize="@dimen/public_font_17sp" />
    </LinearLayout>

    <include layout="@layout/public_line_horizontal_gray_mar15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/public_height_60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="20dp"
            android:layout_marginLeft="@dimen/public_mar_left_15dp"
            android:layout_marginRight="@dimen/public_mar_right_15dp"
            android:text="新密码"
            android:textColor="#ff333333"
            android:textSize="17sp" />

        <me.jessyan.armscomponent.commonres.other.ClearEditText
            android:id="@+id/et_pwd_new"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/public_mar_right_15dp"
            android:background="@color/transparent"
            android:ellipsize="end"
            android:hint="@string/login_hint_input_pwd_new"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="@color/public_color_333333"
            android:textSize="@dimen/public_font_17sp" />
    </LinearLayout>

    <include layout="@layout/public_line_horizontal_gray_mar15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/public_height_60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="20dp"
            android:layout_marginLeft="@dimen/public_mar_left_15dp"
            android:layout_marginRight="@dimen/public_mar_right_15dp"
            android:text="@string/confirm_password"
            android:textColor="#ff333333"
            android:textSize="17sp" />

        <me.jessyan.armscomponent.commonres.other.ClearEditText
            android:id="@+id/et_pwd_confirm"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/public_mar_right_15dp"
            android:background="@color/transparent"
            android:ellipsize="end"
            android:hint="@string/please_confirm_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="@color/public_color_333333"
            android:textSize="@dimen/public_font_17sp" />
    </LinearLayout>

    <include layout="@layout/public_line_horizontal_gray_mar15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/public_mar_left_30dp"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/layout_btn_submit" />
    </LinearLayout>

</LinearLayout>